<resources>
    <string name="app_name">MyToDo</string>

    <string name="hello_blank_fragment">Todo actions: </string>

    <!--  To do  -->
    <string name="title_activity_todo">My Todo List</string>
    <string name="todo_fragment_empty_message">Here is your ToDo list. Press the + button to create a new task.</string>

    <!-- Add  -->
    <string name="title_activity_add">Add Action</string>
    <string name="add_fragment_add">Add</string>
    <string name="add_fragment_description_hint">Description</string>
    <string name="add_fragment_category">Category</string>
    <string name="add_fragment_priority">Priority</string>
    <string name="add_fragment_priority_high">High Priority</string>
    <string name="add_fragment_priority_medium">Medium Priority</string>
    <string name="add_fragment_priority_low">Low Priority</string>
    <string name="add_fragment_category_work">Work</string>
    <string name="add_fragment_category_study">Study</string>
    <string name="add_fragment_category_shopping">Shopping</string>
    <string name="add_fragment_category_leisure">Leisure</string>

</resources>
